--- a/index.html
+++ b/index.html
@@ -35,23 +35,16 @@
 
                         </div><!-- /.search_sect -->
 
-                        <div class="users_info align_center ps_r">
-
-                            <button href="#" class="custom_a user_info-btn bg_transparent border_none align_center ps_r" id="user_btn">
+                        <div class="dropdown user_details">
+                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
                                 <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                                <i class="fa fa-caret-down" aria-hidden="true"></i>
-                                <!-- <i class="bi bi-list"></i> -->
                             </button>
-    
-    
-                            <ul class="user_info_dropdown ps_a list_style_none" id="user_dropdown">
-                                <li>Item A</li>
-                                <li>Item B</li>
-                                <li>Item C</li>
-                                <li>Item D</li>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                              <li><a class="dropdown-item" href="#">Action</a></li>
+                              <li><a class="dropdown-item" href="#">Another action</a></li>
+                              <li><a class="dropdown-item" href="#">Something else here</a></li>
                             </ul>
-
-                        </div><!-- /.users_info -->
+                          </div>
 
                         <div class="nav_dropdown-sect ps_r">
 
