--- a/index.html
+++ b/index.html
@@ -48,17 +48,7 @@
 
                         </div>
 
-                        <!-- <div class="dropdown user_details">
-                            <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1"
-                                data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fa fa-user-circle-o" aria-hidden="true"></i>
-                            </button>
-                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </div> -->
+                        
 
                         <div class="dropdown">
                             <button class="btn dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
@@ -75,7 +65,6 @@
 
                             <a href="#" class="custom_a hamburger align_center" id="hamburger_btn">
                                 <i class="fa fa-bars" aria-hidden="true"></i>
-                                <!-- <i class="bi bi-list"></i> -->
                             </a>
 
 
@@ -128,23 +117,7 @@
 
 
                 <img id="hero_img" src="./img/banner.jpg" alt="">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero corporis magnam quas velit non omnis
-                    quidem, aliquam porro? Et quibusdam ea vero reiciendis illo tempora quidem, distinctio molestiae
-                    libero repudiandae autem corporis impedit vel. Rem repellat natus nulla praesentium esse, velit
-                    debitis maxime minima consectetur cum quasi in delectus repellendus quisquam laudantium tempora
-                    corporis dicta consequatur rerum doloribus. Mollitia itaque possimus aperiam eum ipsum sit pariatur
-                    alias explicabo earum, vel aut perferendis! Quidem fuga, accusamus temporibus veritatis autem esse
-                    impedit, quis non placeat fugit tenetur expedita voluptatem debitis culpa iste nulla dolorem
-                    consequuntur quae praesentium aperiam. Fuga, est culpa recusandae itaque eos minus aliquam quae sed
-                    qui, ipsum tempore tempora. Iusto sapiente quidem incidunt ducimus sed ipsum in similique! Sapiente
-                    nesciunt, harum nostrum delectus culpa assumenda? Asperiores voluptates inventore deserunt placeat
-                    voluptas, eius unde architecto possimus quo dolores aliquid adipisci. Similique excepturi iusto
-                    doloremque, obcaecati eligendi quis fuga quasi numquam ipsa facere animi praesentium, omnis est odit
-                    sed, nesciunt molestias? Rem ducimus in asperiores, eligendi recusandae alias aliquam aut officia
-                    quam perferendis, eos praesentium magnam. Molestiae at veritatis facilis eos, recusandae quam quis
-                    ut sed provident nobis. Vitae est expedita consequuntur consequatur distinctio totam veniam? Qui quo
-                    ut suscipit quam laborum, voluptatum, dignissimos rem ex ea eligendi magni, exercitationem fuga. Sit
-                    natus nulla voluptate in nostrum incidunt nemo ab tempore, at illo, ad fuga laborum a vero eos
+                <p>rum incidunt nemo ab tempore, at illo, ad fuga laborum a vero eos
                     inventore recusandae quos, facilis maiores quas molestias debitis! Iste corrupti ipsam possimus
                     molestiae aliquid voluptas fugiat sed repellat sint veniam perferendis, quae quam, magnam quia,
                     assumenda neque distinctio earum? In dolores beatae at possimus ullam qui, eos repellendus illo
@@ -188,23 +161,7 @@
                     laboriosam aperiam, sint sequi dolores accusamus dolore labore rem! Ducimus, iure omnis laborum,
                     perferendis, recusandae itaque voluptatibus amet minus incidunt perspiciatis earum? Odit
                     reprehenderit quibusdam nobis dolorum dolor doloribus, accusamus cum quia unde sit? Eius nemo libero
-                    fugiat? Laborum, quidem iste. Est velit, quo nesciunt fugiat deleniti quisquam, magnam provident sed
-                    maiores error, aliquid corporis qui tempore non ipsum mollitia suscipit earum sint incidunt itaque
-                    nostrum natus. Explicabo, ratione! Odit nobis magnam ratione tempora rerum repudiandae impedit,
-                    assumenda quis magni corporis incidunt? Nihil maxime eius voluptas nostrum ipsam eos recusandae
-                    consequuntur nisi quaerat quo harum a magnam sed explicabo necessitatibus alias, ratione asperiores
-                    impedit ullam id doloribus veniam ex? Voluptates nobis, reprehenderit illum, totam corporis
-                    consectetur saepe repudiandae delectus modi culpa, non animi numquam voluptas iusto veritatis
-                    deserunt consequuntur amet pariatur? Nisi ut vitae, nam dolor excepturi maiores. Iure, ipsam,
-                    consequatur id, perferendis quasi cupiditate maiores molestiae alias in tenetur atque! Dolore ad
-                    velit blanditiis fuga, aut sint quam possimus repudiandae eveniet corporis corrupti beatae repellat
-                    deserunt sequi. Quia maxime, totam mollitia sed repudiandae eos, vero atque, consequuntur hic
-                    impedit quod! Impedit repudiandae fuga dolore facilis nihil modi qui natus excepturi eius rem
-                    ratione adipisci, quisquam fugit perspiciatis unde reiciendis, nam in et eum id harum! Quod esse
-                    totam harum iure fugit, ipsam vitae aliquid eaque, praesentium odio temporibus ea eum nam alias eius
-                    ex officiis tempora nostrum sint beatae omnis, quis hic deleniti perferendis! Debitis, labore
-                    voluptate! Praesentium facere eaque nobis nisi nemo sequi laboriosam, ratione aut assumenda delectus
-                    maxime.</p>
+                    fugiat? Laborum</p>
             </section><!-- /.hero_sect -->
 
             
